Fix project height and project image height, remove unnecessary gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,11 +253,10 @@ section#projects {
 }
 
 .project {
-    height: 500px;
+    height: 550px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 1rem;
 }
 
 .project-title {
@@ -267,6 +266,7 @@ section#projects {
 
 .project-img {
     width: 100%;
+    height: 250px;
     object-fit: cover;
 }
 
